<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_shape"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/top_rounded_subtitle"
        android:gravity="center"
        android:text="@string/set_price"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/value_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/edit_text"
        android:inputType="numberDecimal"
        android:minWidth="210dp"
        android:text="@string/null_number" />

    <Button
        android:id="@+id/dialog_save_button"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_rounded_button"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>